# estimators

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE.md  README.md  bias_est.py  kraft_demo.py  kraft_quat_ukf.py  nonlinear_kalman.py  pyproject.toml  ukf_demo.py  usque.py  usque_test.py
.github/workflows/: lint_and_test.yml
demos/: bias_est.py  kraft_demo.py  mag_cal.py  rate_gyro_demo.py  run_all_demos.sh  sensor_sims_demo.py  ukf_demo.py
sensor_models/: accelerometer.py  allan.py  autocorrelation.py  barometer.py  gps.py  mag_cal.py  mag_cal_ukf_demo.py  magnetometer.py  magnetometer_test.py  rate_gyro.py  rate_gyro_test.py  sensor_interface.py  sensor_sims_demo.py
src/estimators/: kraft_quat_ukf.py  nonlinear_kalman.py  usque.py
src/estimators/sensor_models/: accelerometer.py  allan.py  autocorrelation.py  barometer.py  gps.py  magnetometer.py  rate_gyro.py  sensor_interface.py
src/estimators/utils/: plot_utils_16322.py  quat_utils.py  quat_utils_test.py
tests/sensor_models/: magnetometer_test.py
tests/utils/: quat_utils_test.py
utils/: plot_utils_16322.py  quat_utils.py  quat_utils_test.py
